        Fixes a bug where the Inspector's UI would not animate or         fully function because JavaScript timeouts, intervals and         CSS animation timers where not firing while paused at a         a breakpoint in the inspected page.

https://bugs.webkit.org/show_bug.cgi?id=20042

        Reviewed by Darin Adler.

        Test: manual-tests/inspector/forzen-ui-while-paused.html

        * page/JavaScriptDebugServer.cpp:
        (WebCore::JavaScriptDebugServer::pauseIfNeeded):
        Add a call to TimerBase::fireTimersInNestedEventLoop before
        spinning the EventLoop.

Canonical link: https://commits.webkit.org/28313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35908 268f45cc-cd09-0410-ab3c-d52691b4dbfc